@@ -44,6 +44,7 @@
 
 #include <xapian.h>
 
+#include "append_filename_arg.h"
 #include "atomparse.h"
 #include "commonhelp.h"
 #include "diritor.h"
@@ -109,64 +110,6 @@ p_notalnum(unsigned int c)
     return !isalnum(static_cast<unsigned char>(c));
 }
 
-static string
-shell_protect(const string & file)
-{
-    string safefile = file;
-#ifdef __WIN32__
-    bool need_to_quote = false;
-    for (string::iterator i = safefile.begin(); i != safefile.end(); ++i) {
-	unsigned char ch = *i;
-	if (!isalnum(ch) && ch < 128) {
-	    if (ch == '/') {
-		// Convert Unix path separators to backslashes.  C library
-		// functions understand "/" in paths, but external commands
-		// generally don't, and also may interpret a leading '/' as
-		// introducing a command line option.
-		*i = '\\';
-	    } else if (ch == ' ') {
-		need_to_quote = true;
-	    } else if (ch < 32 || strchr("<>\"|*?", ch)) {
-		// Check for invalid characters in the filename.
-		string m("Invalid character '");
-		m += ch;
-		m += "' in filename \"";
-		m += file;
-		m += '"';
-		throw m;
-	    }
-	}
-    }
-    if (safefile[0] == '-') {
-	// If the filename starts with a '-', protect it from being treated as
-	// an option by prepending ".\".
-	safefile.insert(0, ".\\");
-    }
-    if (need_to_quote) {
-	safefile.insert(0, "\"");
-	safefile += '"';
-    }
-#else
-    string::size_type p = 0;
-    if (!safefile.empty() && safefile[0] == '-') {
-	// If the filename starts with a '-', protect it from being treated as
-	// an option by prepending "./".
-	safefile.insert(0, "./");
-	p = 2;
-    }
-    while (p < safefile.size()) {
-	// Don't escape some safe characters which are common in filenames.
-	unsigned char ch = safefile[p];
-	if (!isalnum(ch) && strchr("/._-", ch) == NULL) {
-	    safefile.insert(p, "\\");
-	    ++p;
-	}
-	++p;
-    }
-#endif
-    return safefile;
-}
-
 static void
 parse_pdfinfo_field(const char * p, const char * end, string & out, const char * field, size_t len)
 {
@@ -183,11 +126,13 @@ parse_pdfinfo_field(const char * p, const char * end, string & out, const char *
     parse_pdfinfo_field((P), (END), (OUT), FIELD":", CONST_STRLEN(FIELD) + 1)
 
 static void
-get_pdf_metainfo(const string & safefile, string &author, string &title,
+get_pdf_metainfo(const string & file, string &author, string &title,
 		 string &keywords)
 {
     try {
-	string pdfinfo = stdout_to_string("pdfinfo -enc UTF-8 " + safefile);
+	string cmd = "pdfinfo -enc UTF-8";
+	append_filename_argument(cmd, file);
+	string pdfinfo = stdout_to_string(cmd);
 
 	const char * p = pdfinfo.data();
 	const char * end = p + pdfinfo.size();
@@ -443,7 +388,7 @@ index_mimetype(const string & file, const string & url, const string & ext,
 		skip(file, "required filter not installed", SKIP_VERBOSE_ONLY);
 		return;
 	    }
-	    cmd += shell_protect(file);
+	    append_filename_argument(cmd, file);
 	    try {
 		dump = stdout_to_string(cmd);
 	    } catch (ReadError) {
@@ -493,15 +438,16 @@ index_mimetype(const string & file, const string & url, const string & ext,
 		// FIXME: What charset is the file?  Look at contents?
 	    }
 	} else if (mimetype == "application/pdf") {
-	    string safefile = shell_protect(file);
-	    string cmd = "pdftotext -enc UTF-8 " + safefile + " -";
+	    string cmd = "pdftotext -enc UTF-8";
+	    append_filename_argument(cmd, file);
+	    cmd += " -";
 	    try {
 		dump = stdout_to_string(cmd);
 	    } catch (ReadError) {
 		skip_cmd_failed(file, cmd);
 		return;
 	    }
-	    get_pdf_metainfo(safefile, author, title, keywords);
+	    get_pdf_metainfo(file, author, title, keywords);
 	} else if (mimetype == "application/postscript") {
 	    // There simply doesn't seem to be a Unicode capable PostScript to
 	    // text converter (e.g. pstotext always outputs ISO-8859-1).  The
@@ -520,11 +466,14 @@ index_mimetype(const string & file, const string & url, const string & ext,
 		return;
 	    }
 	    tmpfile += "/tmp.pdf";
-	    string safetmp = shell_protect(tmpfile);
-	    string cmd = "ps2pdf " + shell_protect(file) + " " + safetmp;
+	    string cmd = "ps2pdf";
+	    append_filename_argument(cmd, file);
+	    append_filename_argument(cmd, tmpfile);
 	    try {
 		(void)stdout_to_string(cmd);
-		cmd = "pdftotext -enc UTF-8 " + safetmp + " -";
+		cmd = "pdftotext -enc UTF-8";
+		append_filename_argument(cmd, tmpfile);
+		cmd += " -";
 		dump = stdout_to_string(cmd);
 	    } catch (ReadError) {
 		skip_cmd_failed(file, cmd);
@@ -535,7 +484,7 @@ index_mimetype(const string & file, const string & url, const string & ext,
 		throw;
 	    }
 	    try {
-		get_pdf_metainfo(safetmp, author, title, keywords);
+		get_pdf_metainfo(tmpfile, author, title, keywords);
 	    } catch (...) {
 		unlink(tmpfile.c_str());
 		throw;
@@ -545,8 +494,11 @@ index_mimetype(const string & file, const string & url, const string & ext,
 		   startswith(mimetype, "application/vnd.oasis.opendocument."))
 	{
 	    // Inspired by http://mjr.towers.org.uk/comp/sxw2text
-	    string safefile = shell_protect(file);
-	    string cmd = "unzip -p " + safefile + " content.xml ; unzip -p " + safefile + " styles.xml";
+	    string cmd = "unzip -p";
+	    append_filename_argument(cmd, file);
+	    cmd += " content.xml ; unzip -p";
+	    append_filename_argument(cmd, file);
+	    cmd += " styles.xml";
 	    try {
 		OpenDocParser parser;
 		parser.parse_html(stdout_to_string(cmd));
@@ -556,7 +508,9 @@ index_mimetype(const string & file, const string & url, const string & ext,
 		return;
 	    }
 
-	    cmd = "unzip -p " + safefile + " meta.xml";
+	    cmd = "unzip -p";
+	    append_filename_argument(cmd, file);
+	    cmd += " meta.xml";
 	    try {
 		MetaXmlParser metaxmlparser;
 		metaxmlparser.parse_html(stdout_to_string(cmd));
@@ -568,7 +522,8 @@ index_mimetype(const string & file, const string & url, const string & ext,
 		// It's probably best to index the document even if this fails.
 	    }
 	} else if (mimetype == "application/vnd.ms-excel") {
-	    string cmd = "xls2csv -c' ' -q0 -dutf-8 " + shell_protect(file);
+	    string cmd = "xls2csv -c' ' -q0 -dutf-8";
+	    append_filename_argument(cmd, file);
 	    try {
 		dump = stdout_to_string(cmd);
 	    } catch (ReadError) {
@@ -577,7 +532,6 @@ index_mimetype(const string & file, const string & url, const string & ext,
 	    }
 	} else if (startswith(mimetype, "application/vnd.openxmlformats-officedocument.")) {
 	    const char * args = NULL;
-	    string safefile = shell_protect(file);
 	    string tail(mimetype, 46);
 	    if (startswith(tail, "wordprocessingml.")) {
 		// unzip returns exit code 11 if a file to extract wasn't found
@@ -588,7 +542,11 @@ index_mimetype(const string & file, const string & url, const string & ext,
 		// Extract the shared string table first, so our parser can
 		// grab those ready for parsing the sheets which will reference
 		// the shared strings.
-		string cmd = "unzip -p " + safefile + " xl/sharedStrings.xml ; unzip -p " + safefile + " xl/worksheets/sheet\\*.xml";
+		string cmd = "unzip -p";
+		append_filename_argument(cmd, file);
+		cmd += " xl/sharedStrings.xml ; unzip -p";
+		append_filename_argument(cmd, file);
+		cmd += " xl/worksheets/sheet\\*.xml";
 		try {
 		    XlsxParser parser;
 		    parser.parse_html(stdout_to_string(cmd));
@@ -609,7 +567,9 @@ index_mimetype(const string & file, const string & url, const string & ext,
 	    }
 
 	    if (args) {
-		string cmd = "unzip -p " + safefile + args;
+		string cmd = "unzip -p";
+		append_filename_argument(cmd, file);
+		cmd += args;
 		try {
 		    XmlParser xmlparser;
 		    xmlparser.parse_html(stdout_to_string(cmd));
@@ -620,7 +580,9 @@ index_mimetype(const string & file, const string & url, const string & ext,
 		}
 	    }
 
-	    string cmd = "unzip -p " + safefile + " docProps/core.xml";
+	    string cmd = "unzip -p";
+	    append_filename_argument(cmd, file);
+	    cmd += " docProps/core.xml";
 	    try {
 		MetaXmlParser metaxmlparser;
 		metaxmlparser.parse_html(stdout_to_string(cmd));
@@ -640,7 +602,8 @@ index_mimetype(const string & file, const string & url, const string & ext,
 	    md5_string(text, md5);
 	} else if (mimetype == "application/x-abiword-compressed") {
 	    // FIXME: Implement support for metadata.
-	    string cmd = "gzip -dc " + shell_protect(file);
+	    string cmd = "gzip -dc";
+	    append_filename_argument(cmd, file);
 	    try {
 		XmlParser xmlparser;
 		xmlparser.parse_html(stdout_to_string(cmd));
@@ -652,7 +615,8 @@ index_mimetype(const string & file, const string & url, const string & ext,
 	} else if (mimetype == "text/rtf") {
 	    // The --text option unhelpfully converts all non-ASCII characters
 	    // to "?" so we use --html instead, which produces HTML entities.
-	    string cmd = "unrtf --nopict --html 2>/dev/null " + shell_protect(file);
+	    string cmd = "unrtf --nopict --html 2>/dev/null";
+	    append_filename_argument(cmd, file);
 	    MyHtmlParser p;
 	    p.ignore_metarobots();
 	    try {
@@ -671,7 +635,8 @@ index_mimetype(const string & file, const string & url, const string & ext,
 	    // pod2text's output character set doesn't seem to be documented,
 	    // but from inspecting the source it looks like it's probably
 	    // iso-8859-1.
-	    string cmd = "pod2text " + shell_protect(file);
+	    string cmd = "pod2text";
+	    append_filename_argument(cmd, file);
 	    try {
 		dump = stdout_to_string(cmd);
 		convert_to_utf8(dump, "ISO-8859-1");
@@ -685,7 +650,8 @@ index_mimetype(const string & file, const string & url, const string & ext,
 	    // actually better to use -e2 (ISO-8859-1) and then convert, so
 	    // let's do that for now until we handle Unicode "compatibility
 	    // decompositions".
-	    string cmd = "catdvi -e2 -s " + shell_protect(file);
+	    string cmd = "catdvi -e2 -s";
+	    append_filename_argument(cmd, file);
 	    try {
 		dump = stdout_to_string(cmd);
 		convert_to_utf8(dump, "ISO-8859-1");
@@ -694,8 +660,9 @@ index_mimetype(const string & file, const string & url, const string & ext,
 		return;
 	    }
 	} else if (mimetype == "application/vnd.ms-xpsdocument") {
-	    string safefile = shell_protect(file);
-	    string cmd = "unzip -p " + safefile + " Documents/1/Pages/\\*.fpage";
+	    string cmd = "unzip -p";
+	    append_filename_argument(cmd, file);
+	    cmd += " Documents/1/Pages/\\*.fpage";
 	    try {
 		XpsXmlParser xpsparser;
 		dump = stdout_to_string(cmd);
@@ -735,7 +702,8 @@ index_mimetype(const string & file, const string & url, const string & ext,
 
 	    generate_sample_from_csv(dump, sample, sample_size);
 	} else if (mimetype == "application/vnd.ms-outlook") {
-	    string cmd = get_pkglibbindir() + "/outlookmsg2html " + shell_protect(file);
+	    string cmd = get_pkglibbindir() + "/outlookmsg2html";
+	    append_filename_argument(cmd, file);
 	    MyHtmlParser p;
 	    p.ignore_metarobots();
 	    try {
@@ -763,8 +731,8 @@ index_mimetype(const string & file, const string & url, const string & ext,
 	    keywords = svgparser.keywords;
 	    author = svgparser.author;
 	} else if (mimetype == "application/x-debian-package") {
-	    string cmd("dpkg-deb -f ");
-	    cmd += shell_protect(file);
+	    string cmd("dpkg-deb -f");
+	    append_filename_argument(cmd, file);
 	    cmd += " Description";
 	    const string & desc = stdout_to_string(cmd);
 	    // First line is short description, which we use as the title.
@@ -774,8 +742,8 @@ index_mimetype(const string & file, const string & url, const string & ext,
 		dump.assign(desc, idx + 1, string::npos);
 	    }
 	} else if (mimetype == "application/x-redhat-package-manager") {
-	    string cmd("rpm -q --qf '%{SUMMARY}\\n%{DESCRIPTION}' -p ");
-	    cmd += shell_protect(file);
+	    string cmd("rpm -q --qf '%{SUMMARY}\\n%{DESCRIPTION}' -p");
+	    append_filename_argument(cmd, file);
 	    const string & desc = stdout_to_string(cmd);
 	    // First line is summary, which we use as the title.
 	    string::size_type idx = desc.find('\n');
@@ -1248,19 +1216,19 @@ main(int argc, char **argv)
     mime_map["tmp"] = "ignore";
     mime_map["ttf"] = "ignore";
 
-    commands["application/msword"] = "antiword -mUTF-8.txt ";
-    commands["application/vnd.ms-powerpoint"] = "catppt -dutf-8 ";
+    commands["application/msword"] = "antiword -mUTF-8.txt";
+    commands["application/vnd.ms-powerpoint"] = "catppt -dutf-8";
     // Looking at the source of wpd2html and wpd2text I think both output
     // UTF-8, but it's hard to be sure without sample Unicode .wpd files
     // as they don't seem to be at all well documented.
-    commands["application/vnd.wordperfect"] = "wpd2text ";
+    commands["application/vnd.wordperfect"] = "wpd2text";
     // wps2text produces UTF-8 output from the sample files I've tested.
-    commands["application/vnd.ms-works"] = "wps2text ";
+    commands["application/vnd.ms-works"] = "wps2text";
     // Output is UTF-8 according to "man djvutxt".  Generally this seems to
     // be true, though some examples from djvu.org generate isolated byte
     // 0x95 in a context which suggests it might be intended to be a bullet
     // (as it is in CP1250).
-    commands["image/vnd.djvu"] = "djvutxt ";
+    commands["image/vnd.djvu"] = "djvutxt";
 
     if (argc == 2 && strcmp(argv[1], "-v") == 0) {
 	// -v was the short option for --version in 1.2.3 and earlier, but
@@ -1371,9 +1339,7 @@ main(int argc, char **argv)
 	case 'F': {
 	    const char * s = strchr(optarg, ':');
 	    if (s != NULL || !s[1]) {
-		string command(s + 1);
-		command += ' ';
-		commands[string(optarg, s - optarg)] = command;
+		commands[string(optarg, s - optarg)] = string(s + 1);
 	    } else {
 		cerr << "Invalid filter mapping '" << optarg << "'\n"
 			"Should be of the form TYPE:COMMAND, e.g. 'application/octet-stream:strings -n8'"
